# tsc

./: CMakeLists.txt  README.md
data/: plaskie.nc
src/: CMakeLists.txt  app.cpp  app.h  gcode_drawer.cpp  gcode_drawer.h  gcode_parser.cpp  gcode_parser.h  gcode_tbl_model.cpp  gcode_tbl_model.h  gcode_view_parser.cpp  gcode_view_parser.h  graph.cpp  graph.h  grbl_ctrl.cpp  grbl_ctrl.h  line_segment.hpp  main.cpp  main_window.cpp  main_window.h  parser_tools.cpp  parser_tools.h  point_segment.hpp  tool_drawer.cpp  tool_drawer.h  ui.cpp  ui.h
